<resources>
    <string name="app_name">AnimalTracker2</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_quickadd">Quick Add</string>
    <string name="menu_gallery">Saved Animal List</string>
    <string name="menu_slideshow">Create Custom Animal Entry</string>
    <string name="menu_map">Map Screen</string>

    <!--Animal Creation-->

    <string name="animal_add_diet">Please Enter the animals Diet.</string>
    <string name="animal_add_name">Please Enter the animals name.</string>
    <string name="animal_add_species">Please Enter the animals Species.</string>
    <string name="animal_add_region">Please Enter the type of region the animal was spotted in.</string>


    <!-- Update Related Strings-->
    <string name="animal_up_diet">Update animal diet.</string>
    <string name="animal_up_name">Update animal name.</string>
    <string name="animal_up_species">Update animal Species</string>
    <string name="animal_up_region">Update Animal Region</string>

    <!--Auth Related Strings-->
    <string name="auth_email">Existing Email:</string>
    <string name="auth_password">Password:</string>
    <string name="auth_enterEmail">Enter Email Here</string>
    <string name="auth_enterPassword">Enter Email Here</string>
    <string name="auth_login">Login</string>
    <string name="auth_createAccount">Create Account</string>
    <string name="auth_signOut">Sign Out</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="select_profile_image">Select Picture</string>


</resources>