<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_quickadd" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />


        <item
            android:id="@+id/authFragment"
            android:icon="@android:drawable/ic_menu_revert"
            android:onClick="signOut"
            android:title="@string/auth_signOut" />

        <item
            android:id="@+id/themeChange"
            android:icon="@drawable/ic_baseline_nightlight_24"
            android:onClick="swapTheme"
            android:title="Swap Theme" />


    </group>
</menu>